<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/gradient_background">

    <!-- Logo de la aplicación -->
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_app"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="40dp"/>

    <!-- Botón de Ingresar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BotonIngresar"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/primaryColor"
        android:padding="12dp"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:elevation="6dp"
        android:layout_marginBottom="10dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Botón de Registro -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryColor"
        android:padding="12dp"
        android:text="@string/BotonRegistrar"
        android:textColor="#311B92"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:elevation="6dp"
        android:layout_marginBottom="10dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
